<resources>
    <string name="app_name">prm_practice_2</string>
    <string name="Consent">Согласие на обработку\nперсональных данных</string>
    <string name="Password">Введите пароль</string>
    <string name="Email_Address">Введите Email</string>
    <string name="Name">Введите имя</string>
    <string name="Welcome">Добро пожаловать!</string>
    <string name="AccountEmail">Твой Email</string>
    <string name="AccountPassword">Твой пароль</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>