<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Salmon"
    android:name="com.example.prm_practice_2.FirstScreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstScreen"
    tools:layout="@layout/first_screen"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/DarkRed"
            android:text="@string/Welcome"
            android:layout_marginTop="30dp"
            ></TextView>

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Welcome"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkRed"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/NameWrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/PasswordWrite"
            android:layout_alignBottom="@id/Name"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/Name"
            android:layout_toRightOf="@id/Name"
            android:minHeight="48dp"
            android:textColor="@color/DarkRed"
            tools:ignore="SpeakableTextPresentCheck"></EditText>

        <TextView
            android:id="@+id/Email_Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Name"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkRed"
            android:text="@string/Email_Address" />

        <EditText
            android:id="@+id/EmailAddressWrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/PasswordWrite"
            android:layout_alignBottom="@id/Email_Address"
            android:layout_toRightOf="@id/Email_Address"
            android:minHeight="48dp"
            android:textColor="@color/DarkRed"
            tools:ignore="UnknownId,SpeakableTextPresentCheck"></EditText>

        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Email_Address"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkRed"
            android:text="@string/Password" ></TextView>

        <EditText
            android:id="@+id/PasswordWrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/Password"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/Password"
            android:layout_toRightOf="@id/Password"
            android:minHeight="48dp"
            android:textColor="@color/DarkRed"
            tools:ignore="SpeakableTextPresentCheck"></EditText>

        <TextView
            android:id="@+id/Consent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkRed"
            android:text="@string/Consent"
            tools:ignore="UnknownId" />

        <ImageButton
            android:id="@+id/ConsentButton"
            android:layout_width="@dimen/button_margin_width"
            android:layout_height="@dimen/button_margin_height"
            android:layout_alignBottom="@id/Consent"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@id/Consent"
            android:layout_toRightOf="@id/Consent"
            android:backgroundTint="@color/Salmon"
            android:contentDescription="@string/app_name"
            android:onClick="ButtonConsentClickHandler"
            app:srcCompat="@drawable/free_icon_font_check_3917084" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>